k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-web-app
spec:
  selector:
    app: go-web-app
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
